Create new user in existing cryosparc db if user doesn't already exist
Hard-code FASRC cluster login node & path to SIF on FASRC cluster

--- a/form.yml.erb
+++ b/form.yml.erb
@@ -9,7 +9,8 @@ attributes:
     help: |
       Paste your license ID here to get started. Please get your own license ID free of charge for non-profit academic use from <a href="https://cryosparc.com/download" target="_blank">here</a>.
   database_folder:
-    help: "Select a directory to store cryoSPARC database and run directories"
+    help: |
+      Select a directory to store CryoSPARC database and run directories. Can be a path to an existing CryoSPARC database, but you must have write access to the database files.
     widget: text_field
   cryosparc_user_password:
     label: "cryoSPARC password"
