--- a/view.html.erb
+++ b/view.html.erb
@@ -27,7 +27,7 @@ Connection options:
 
 #### Client web browser + SSH tunneling
 1. Use your local SSH client to establish an SSH tunnel to the GPU node running CryoSPARC with the following command (executed from Windows PowerShell/Command Prompt or MacOS/Linux terminal):  
-<input id="txt_ssh_command" value="ssh -NL <%= port %>:<%= host %>:<%= port %> <%= ENV['USER'] %>@your-cluster-login-node" class="form-control" type="text" readonly="readonly">
+<input id="txt_ssh_command" value="ssh -NL <%= port %>:<%= host %>:<%= port %> <%= ENV['USER'] %>@login.rc.fas.harvard.edu" class="form-control" type="text" readonly="readonly">
 <br>
 <button id="copy-ssh-command" class="btn btn-primary btn-sm float-right copy-btn" data-clipboard-action="copy" data-clipboard-target="#txt_ssh_command" data-original-title="Copy SSH Command to Clipboard" title="Copy SSH Command to Clipboard"><span class="fa fa-clipboard"></span> Copy SSH Command to Clipboard</button>
 <br>
